<resources>
    <string name="app_name">设备维修</string>
    <string name="quit">退出登录</string>
    <string name="home">首页</string>
    <string name="todo_list">待办任务</string>
    <string name="asset">资产</string>
    <string name="kpi">KPI</string>
    <string name="work_order">工单</string>
    <string name="report">报修</string>
    <string name="submit_report">我要报修</string>
    <string name="sort">排序</string>
    <string name="device_sort">设备排序</string>
    <string name="filter">筛选</string>
    <string name="location">位置</string>
    <string name="system">系统</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="error_message">问题描述</string>
    <string name="select_device">选择设备</string>
    <string name="priority">优先级</string>
    <string name="error_apprearance">故障现象</string>
    <string name="report_person">报修人</string>
    <string name="department">部门</string>
    <string name="report_image">报修图片</string>
    <string name="submit">提交</string>
    <string name="user_login">账号登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="username_empty">请输入用户名</string>
    <string name="password_empty">请输入密码</string>
    <string name="logining">登录中,请稍候...</string>
    <string name="login_failed">登录失败</string>
    <string name="input_username">输入手机号</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="no_authority">您没有权限访问此模块</string>
    <string name="request_failed">服务器维护中,请稍后重试</string>
    <string name="submit_success">报修成功</string>
    <string name="submit_failed">报修失败</string>
    <string name="my_department">当前部门</string>
    <string name="user_center">个人中心</string>
    <string name="to">至</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="only_mine">只显示我的</string>
    <string name="status">状态</string>
    <string name="search_key">搜索关键字</string>
    <string name="todolist_no">未办任务</string>
    <string name="todolist_yes">已办任务</string>
    <string name="workorder_detail">工单详情</string>
    <string name="asset_detail">资产详情</string>
</resources>
