<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.cqsynet.ema.activity.ForgetPswActivity">

    <include layout="@layout/titlebar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etUsername_activity_forget_psw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textColor="@color/text2"
            android:textSize="@dimen/text_size_large"
            android:hint="@string/input_username"
            android:background="@null"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/tvSendVerifyCode_activity_forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_large"
            android:text="@string/send_verify_code"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <EditText
        android:id="@+id/etVerifyCode_activity_forget_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/text2"
        android:hint="@string/input_verify_code"
        android:background="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <EditText
        android:id="@+id/etPassword_activity_forget_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/text2"
        android:textSize="@dimen/text_size_large"
        android:hint="@string/input_new_password"
        android:background="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <Button
        android:id="@+id/btnSubmit_activity_forget_psw"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"/>

</LinearLayout>
