<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStartDate_fragment_workorder_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="8dp"
            android:gravity="center"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/sort"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text3"
            android:hint="@string/start_date"
            android:background="@drawable/shape_gray_frame_background"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text3"
            android:textSize="@dimen/text_size_large"
            android:text="@string/to"/>

        <TextView
            android:id="@+id/tvEndDate_fragment_workorder_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="8dp"
            android:gravity="center"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/sort"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text3"
            android:hint="@string/end_date"
            android:background="@drawable/shape_gray_frame_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStatus_fragment_workorder_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="8dp"
            android:gravity="center"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/sort"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text3"
            android:hint="@string/status"
            android:background="@drawable/shape_gray_frame_background"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <FrameLayout
            android:id="@+id/flOnlyMine_fragment_workorder_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/shape_gray_frame_background">

            <CheckBox
                android:id="@+id/cbOnlyMine_fragment_workorder_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/text3"
                android:text="@string/only_mine"/>

        </FrameLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="24dp">

        <Button
            android:id="@+id/btnCancel_fragment_workorder_filter"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_frame_background"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/text2"
            android:textSize="@dimen/text_size_large"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnConfirm_fragment_workorder_filter"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"/>

    </LinearLayout>

</LinearLayout>
